--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <!-- project 6 -->
   <div class="image">
     <a href="https://sreepriiya.github.io/pricing_panel/">
-    <img src="images/project6.JPG" alt="Project 6" style="width: 100%;" class="image__img">
+    <img src="images/project6.jpg" alt="Project 6" style="width: 100%;" class="image__img">
     <div class="image__overlay">
       <div class="image_title"><h3>Pricing Panel</h3></div>
       <p class="image__description">Click here to open my Princing Panel Project which is Demo for Flexbox in CSS.</p>
