--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="gettoknowme">
             <h3>Get to know me!</h3>
             <p>I am Frontend and Backend Web Developer building responsive and interactive designs of Web Applications. Check out my Projects sections for more details.</p>
-            <p>Feel free to Connect or Follow me in LinkedIn</p>
+            <p>Feel free to Connect or Follow me in <a href="https://www.linkedin.com/in/sreepriiya">LinkedIn</a></p>
             <p>I'm open to Job opportunities where I can contribute and gain more knowledge.</p>
             <p>If you have a good opportunity that matches my skills and experience then don't hesitate to contact me.</p>
             <a href="#contact"><button type="button" class="btn">Contact</button></a>
